--- a/css/style.css
+++ b/css/style.css
@@ -228,13 +228,25 @@ input::placeholder {
   }
 }
 
+@media screen and (max-width: 740px) {
+  :root {
+    font-size: 14px;
+  }
+}
+
 @media screen and (max-width: 430px) {
+  :root {
+    font-size: 13px;
+  }
   .layer h2 {
     font-size: 20px;
   }
 }
 
 @media screen and (max-width: 310px) {
+  :root {
+    font-size: 11px;
+  }
   .layer h2 {
     font-size: 16px;
   }
